# H.E.L.M.

./: .gitignore  README.md  helm.cmd  helm.ps1  helm.sh  package-lock.json  pyproject.toml  start_here.cmd  start_here.ps1  start_here.sh  tasks.py
.github/workflows/: ci.yml
.helm/: graph-layouts.v1.json
.vendor/libcst/libcst-1.8.6.dist-info/: RECORD
.vendor/libcst/pyyaml-6.0.3.dist-info/: RECORD
.vendor/libcst/typing_extensions-4.15.0.dist-info/: RECORD
apps/desktop/: .prettierignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: main.tsx
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src/app/: App.tsx  AppProviders.test.tsx  AppProviders.tsx  NewProjectMenuBridge.test.tsx  NewProjectMenuBridge.tsx  router.tsx
apps/desktop/src/components/: CommandPalette.test.tsx  CommandPalette.tsx
apps/desktop/src/components/editor/: InspectorCodeSurface.tsx  InspectorCodeSurfaceMonaco.tsx  inspectorCodeRange.test.ts  inspectorCodeRange.ts  inspectorLanguage.test.ts  inspectorLanguage.ts  monacoSetup.ts
apps/desktop/src/components/graph/: BlueprintEdge.tsx  BlueprintNode.tsx  GraphCanvas.test.tsx  GraphCanvas.tsx  GraphToolbar.test.tsx  GraphToolbar.tsx  RerouteNode.tsx  flowDocument.ts  (+17 more)
apps/desktop/src/routes/: IndexingScreen.tsx  WelcomeScreen.tsx  WorkspaceScreen.tsx  useWorkspaceLauncher.ts  welcome-flow.test.tsx  workspace-screen.test.tsx
apps/desktop/src/store/: uiStore.test.ts  uiStore.ts  undoStore.ts
apps/desktop/src/styles/: index.css
apps/desktop/src/test/: setup.ts
docs/: architecture.md  ci.md  dependencies.md  recovery.md
requirements/: python-dev.in  python-dev.txt  python-runtime.in  python-runtime.txt
scripts/: audit.py  bootstrap.py  dev.py  helm-launch.ps1  helm-launch.sh
security/: audit-allowlist.json
src/helm/: __init__.py  _vendor.py  cli.py  config.py  io_atomic.py  recovery.py  workspace_undo.py
src/helm/editor/: __init__.py  declaration_support.py  flow_model.py  models.py  patcher.py  serializer.py
src/helm/graph/: __init__.py  builder.py  models.py  queries.py
src/helm/parser/: __init__.py  python_parser.py  repo_loader.py  symbols.py
src/helm/ui/: __init__.py  api.py  desktop_bridge.py  python_adapter.py  workspace_files.py  workspace_session.py
src/helm/utils/: __init__.py  logging.py
tests/: __init__.py  helpers.py  test_audit.py  test_bootstrap.py  test_cli.py  test_config.py  test_desktop_assets.py  test_desktop_bridge.py  test_dev_entrypoint.py  test_graph_builder.py  test_patcher.py  test_python_adapter.py  test_python_parser.py  test_recovery.py  test_repo_loader.py  test_tasks.py  test_windows_wrappers.py  test_workspace_recursive_operations.py  test_workspace_session.py
(+125 files in other folders)
