[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "helm-structural-editor"
version = "0.1.0"
description = "H.E.L.M. is a bidirectional repo-to-graph structural editor for Python codebases."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "OpenAI Codex" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
helm = "helm.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
