[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "helm-structural-editor"
version = "0.1.0"
description = "H.E.L.M. is a bidirectional repo-to-graph structural editor for Python codebases."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "OpenAI Codex" }]
dependencies = ["libcst>=1.8.6"]

[project.optional-dependencies]
dev = [
    "invoke>=2.2",
    "pip-audit>=2.7",
    "pip-tools>=7.5",
    "pytest>=7.0",
    "ruff>=0.8",
]

[project.scripts]
helm = "helm.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
target-version = "py39"
line-length = 100
extend-exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".tmp-test-bootstrap",
    ".venv",
    ".venv-helm-dev",
    "apps/desktop/dist",
    "apps/desktop/node_modules",
    "apps/desktop/src-tauri/gen",
    "apps/desktop/src-tauri/target",
    "build",
    "dist",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
