[package]
name = "helm-desktop"
version = "0.1.0"
description = "Premium desktop shell for H.E.L.M."
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
notify = "6.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-dialog = "2.7.0"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Storage_FileSystem"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
